--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-deck-swiper": "^2.0.18",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-chat": "2.6.5",
