--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-media-library": "~17.1.7",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
+    "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-deck-swiper": "^2.0.18",
