--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@rn-vui/base": "^5.1.8",
     "@rn-vui/themed": "^5.1.8",
     "@supabase/supabase-js": "^2.52.0",
+    "color": "^5.0.0",
     "expo": "~53.0.20",
     "expo-camera": "~16.1.11",
     "expo-image-picker": "~16.1.4",
